# pfp-cli

./: Cargo.toml  README.md
.github/workflows/: expand.yml  rust.yml
cli/: Cargo.toml
cli/src/: args.rs  leaking_allocator.rs  logging_allocator.rs  main.rs  processor.rs
cli/src/processor/: add.rs  add_stored.rs  alias.rs  list.rs  mod.rs  notes.rs  remove.rs  set_primary.rs  shell.rs  show.rs  utils.rs
cli/tests/cli/: aliases.rs  common.rs  initialization.rs  invalid_data.rs  list.rs  main.rs  passwords.rs  shell.rs
json_serde/: Cargo.toml
json_serde/src/: lib.rs
json_sizeoptimized/: Cargo.toml
json_sizeoptimized/src/: api.rs  lib.rs  macros.rs  secret_serialization.rs  types.rs
json_sizeoptimized_derive/: Cargo.toml
json_sizeoptimized_derive/src/: attrs.rs  container.rs  deserialize.rs  field.rs  lib.rs  serialize.rs  variant.rs
json_streamed/: Cargo.toml
json_streamed/src/: lib.rs  macros.rs  secret_serialization.rs
pfp/: Cargo.toml
pfp/src/: crypto.rs  error.rs  lib.rs  passwords.rs  recovery_codes.rs  storage.rs
pfp/src/json/: macros.rs  mod.rs
pfp/src/storage_io/: file.rs
pfp/src/storage_types/: character_set.rs  mod.rs  password.rs  site.rs
src/: crypto.rs  error.rs  json.rs  lib.rs  main.rs  master_password.rs  passwords.rs  recovery_codes.rs  storage.rs  storage_io.rs  storage_types.rs
src/storage_io/: file.rs  json.rs  memory.rs  mod.rs
src/storage_types/: character_set.rs  json.rs  mod.rs  password.rs  site.rs
tests/cli/: aliases.rs  common.rs  initialization.rs  invalid_data.rs  list.rs  main.rs  passwords.rs
