[package]
name = "pfp-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pfp-cli"
test = false
doc = false

[features]
sizeoptimized = ["pfp/sizeoptimized"]

[dependencies]
app_dirs2 = "2.4"
clap = { version = "3.1.12", features = ["derive"] }
pfp = { path = "../pfp" }
qrcodegen = "1.8.0"
question = "0.2.2"
rpassword = "6.0.1"

[dev-dependencies]
subprocess = "0.2.8"
tempfile = "3.3.0"
