[package]
name = "pfp-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pfp-cli"
test = false
doc = false

[features]
sizeoptimized = ["pfp/sizeoptimized"]

[dependencies]
app_dirs2 = "2.4"
backtrace = "0.3.66"
clap = { version = "3.2.11", features = ["derive"] }
io-streams = "0.12.0"
pfp = { path = "../pfp" }
qrcodegen = "1.8.0"
question = "0.2.2"
rpassword = "6.0.1"
rustyline = "9.1.2"
secrecy = "0.8.0"
shellwords = "1.1.0"

[dev-dependencies]
memmem = "0.1.1"
proc-maps = "0.2.1"
read-process-memory = "0.1.4"
subprocess = "0.2.8"
tempfile = "3.3.0"
