[package]
name = "pfp"
version = "0.1.0"
edition = "2021"

[features]
sizeoptimized = []

[dependencies]
aes-gcm = "0.9.4"
base64 = "0.13"
enumset = "1.0.11"
hmac = "0.12.1"
json_sizeoptimized = { path = "../json_sizeoptimized" }
json_streamed = { path = "../json_streamed" }
rand = "0.8.5"
scrypt = { version = "0.10.0", default-features = false }
sha2 = "0.10.2"
wildmatch = "2.1.0"
