[package]
name = "pfp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aes-gcm = "0.9.4"
base64 = "0.13"
getrandom = { version = "0.2", features = ["js"] }
enumset = "1.0.11"
hmac = "0.12.1"
json_streamed = { path = "../json_streamed" }
rand = "0.8.5"
scrypt = { version = "0.10.0", default-features = false }
secrecy = "0.8.0"
sha2 = "0.10.2"
wildmatch = "2.1.0"
